--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: eco
       POSTGRES_DB: ecoexchange
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eco"]
+      test: ["CMD-SHELL", "pg_isready -U eco -d ecoexchange"]
       interval: 2s
       timeout: 5s
       retries: 10
