--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ pydantic>=2.10.0
 python-multipart>=0.0.18
 sqlalchemy[asyncio]>=2.0.0
 asyncpg>=0.30.0
+opencv-python-headless>=4.9.0
+numpy>=1.26.0
