--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ sqlalchemy[asyncio]>=2.0.0
 asyncpg>=0.30.0
 opencv-python-headless>=4.9.0
 numpy>=1.26.0
+torch>=2.2.0
+torchvision>=0.17.0
+Pillow>=10.0.0
